test/integration/page-config/pages/valid/not-config-export.js
// eslint-disable-next-line no-unused-vars
export { config as notConfig } from '../../config'

export const getServerSideProps = () => {
  return {
    props: {},
  }
}

const NotConfigExport = () => <p>hello world</p>

export default NotConfigExport
