test/integration/page-config/pages/invalid/string-config.js
const StringConfig = () => <p>hello world</p>
// export const config = 'hello world'

export default StringConfig
